syntax = "proto3";

// NOTE run `buf generate` from `cluster/proto` to regenerate code
package weaviate.internal.cluster;


service ClusterService {
  rpc RemovePeer(RemovePeerRequest) returns (RemovePeerResponse) {}
  rpc JoinPeer(JoinPeerRequest) returns (JoinPeerResponse) {}
  rpc NotifyPeer(NotifyPeerRequest) returns (NotifyPeerResponse) {}
  rpc Apply(ApplyRequest) returns (ApplyResponse) {}
  rpc Query(QueryRequest) returns (QueryResponse) {}

  // QuerierStream is experimental, may be changed/removed. A QuerierStream represents a
  // connection between this metadata cluster and a querier node. See the implementing
  // function's doc for more information.
  rpc QuerierStream(stream QuerierStreamRequest) returns (stream QuerierStreamResponse) {}
}

message JoinPeerRequest {
  string id = 1;
  string address = 2;
  bool voter = 3;
}

message JoinPeerResponse {
  string leader = 1;
}

message RemovePeerRequest {
  string id = 1;
}

message RemovePeerResponse {
  string leader = 1;
}

message NotifyPeerRequest {
  string id = 1;
  string address = 2;
}

message NotifyPeerResponse {
}

message ApplyRequest {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_ADD_CLASS = 1;
    TYPE_UPDATE_CLASS = 2;
    TYPE_DELETE_CLASS = 3;
    TYPE_RESTORE_CLASS = 4;
    TYPE_ADD_PROPERTY = 5;

    TYPE_UPDATE_SHARD_STATUS = 10;

    TYPE_ADD_TENANT = 16;
    TYPE_UPDATE_TENANT = 17;
    TYPE_DELETE_TENANT = 18;
    TYPE_TENANT_PROCESS = 19;    

    TYPE_STORE_SCHEMA_V1 = 99;
  }
  Type type = 1;
  string class = 2;
  uint64 version = 3;
  bytes sub_command = 4;
}

message ApplyResponse {
  uint64 version = 1;
  string leader = 2;
}

message QueryRequest {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_GET_CLASSES = 1;
    TYPE_GET_SCHEMA = 2;
    TYPE_GET_TENANTS = 3;
    TYPE_GET_SHARD_OWNER = 4;
    TYPE_GET_TENANTS_SHARDS = 5;
    TYPE_GET_SHARDING_STATE = 6;
  }

  Type type = 1;
  bytes sub_command = 2;
}

message QueryResponse {
  bytes payload = 1;
}

message AddTenantsRequest {
  repeated string cluster_nodes = 1;
  repeated Tenant tenants = 2;
}

message UpdateTenantsRequest {
  repeated Tenant tenants = 1;
  repeated string cluster_nodes = 2;
}

message TenantsProcess {
  enum Op {
    OP_UNSPECIFIED = 0;
    OP_START = 1;
    OP_DONE = 2;
    OP_ABORT = 3;
  }

  Op op = 1;  
  Tenant tenant =2;
}

message TenantProcessRequest {
  enum Action {
    ACTION_UNSPECIFIED = 0;
    ACTION_FREEZING = 1;
    ACTION_UNFREEZING = 2;
  }
  string node = 1;
  Action action = 2;
  repeated TenantsProcess tenants_processes = 3;
}

message DeleteTenantsRequest {
  repeated string tenants = 1;
}

message Tenant {
  string name = 1;
  string status = 2;
}

// QuerierStreamRequest is experimental, may be changed/removed. QuerierStreamRequest is currently
// unused as we only care about the existence of the stream to register the querier node. We'll
// likely add new types to this message in the future and use them.
message QuerierStreamRequest {
  enum Type {
    TYPE_UNSPECIFIED = 0;
  }
  Type type = 1;
}

// QuerierStreamResponse is experimental, may be changed/removed. A QuerierStreamResponse is a
// message sent from the metadata cluster to a querier node.
// A TYPE_CLASS_TENANT_DATA_UPDATE message is sent when the metadata cluster has written new data
// to cloud storage for the specified class/tenant.
message QuerierStreamResponse {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_CLASS_TENANT_DATA_UPDATE = 1;
  }
  Type type = 1;
  ClassTenant class_tenant = 2;
}

// ClassTenant is experimental, may be changed/removed. Just a simple message to hold the class
// and tenant names.
message ClassTenant {
  string class_name = 1;
  string tenant_name = 2;
}
